added to do list

--- a/Big_dataset.ipynb
+++ b/Big_dataset.ipynb
@@ -86,7 +86,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "### TO Do \n",
+    "\n",
+    "## check for columns with 0's and NA's\n",
+    "## delete X_duration"
+   ]
   },
   {
    "cell_type": "code",
