added final datasets

--- a/more_data_cleaning.ipynb
+++ b/more_data_cleaning.ipynb
@@ -12,13 +12,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "rhomis_data = pd.read_csv(\"/Users/anab/Documents/MS_UCDavis/STA208/project/RHoMIS_Full_Data.csv\", engine = \"python\")\n",
-    "rh_indic = pd.read_csv(\"/Users/anab/Documents/MS_UCDavis/STA208/project/STA_208/data/RHoMIS_Indicators.csv\", engine='python')\n",
-    "crop_data = pd.read_csv(\"/Users/anab/Documents/MS_UCDavis/STA208/project/RHoMIS_Full_Data.csv\", engine = \"python\")"
+    "rh_indic = pd.read_csv(\"/Users/anab/Documents/MS_UCDavis/STA208/project/STA_208/data/RHoMIS_Indicators.csv\", engine='python')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## final dataset, keep and drop these columns\n",
+    "rhomis_data = rhomis_data[[\"crop_count\", \"crop_name_1\", \"crop_harvest_1\", \"crop_intercrop_1\"]]\n",
+    "rh_indic = rh_indic.drop(['ITERATION','GPS_LAT', 'GPS_LON', 'GPS_ALT', 'Altitude','WorstFoodSecMonth',\n",
+    "       'BestFoodSecMonth','FIES_Score',  'currency_conversion_factor', 'GHGEmissions' ],axis = 1)"
    ]
   },
   {
@@ -111,7 +122,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bigData  = pd.concat([rhomis_data,crop_data,rh_indic ],axis = 1)\n",
+    "bigData  = pd.concat([rhomis_data,rh_indic ],axis = 1)\n",
     "bigData = bigData.loc[:,~bigData.columns.duplicated()]\n",
     "### replace NaN with na\n",
     "#bigData = bigData.fillna(\"na\")"
@@ -123,11 +134,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### remove these columns\n",
-    "bigData = bigData.drop([\"ITERATION\"], axis = 1) ## survey taken only once for all responders\n",
-    "bigData =  bigData.drop([\"GPS_LAT\"], axis = 1)\n",
-    "bigData = bigData.drop([\"GPS_LON\"], axis = 1)\n",
-    "bigData = bigData.drop([\"GPS_ALT\"], axis = 1)"
+    "# ### remove these columns\n",
+    "# bigData = bigData.drop([\"ITERATION\"], axis = 1) ## survey taken only once for all responders\n",
+    "# bigData =  bigData.drop([\"GPS_LAT\"], axis = 1)\n",
+    "# bigData = bigData.drop([\"GPS_LON\"], axis = 1)\n",
+    "# bigData = bigData.drop([\"GPS_ALT\"], axis = 1)"
    ]
   },
   {
@@ -155,8 +166,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "semi_clean_crop = remove_columns(crop_data,50)\n",
-    "semi_clean_crop.shape"
+    "# semi_clean_crop = remove_columns(crop_data,50)\n",
+    "# semi_clean_crop.shape"
    ]
   },
   {
@@ -165,10 +176,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "semi_clean_cropbigData = semi_clean_crop.drop([\"ITERATION\"], axis = 1) ## survey taken only once for all responders\n",
-    "semi_clean_crop =  semi_clean_crop.drop([\"GPS_LAT\"], axis = 1)\n",
-    "semi_clean_crop = semi_clean_crop.drop([\"GPS_LON\"], axis = 1)\n",
-    "semi_clean_crop = semi_clean_crop.drop([\"GPS_ALT\"], axis = 1)"
+    "# semi_clean_cropbigData = semi_clean_crop.drop([\"ITERATION\"], axis = 1) ## survey taken only once for all responders\n",
+    "# semi_clean_crop =  semi_clean_crop.drop([\"GPS_LAT\"], axis = 1)\n",
+    "# semi_clean_crop = semi_clean_crop.drop([\"GPS_LON\"], axis = 1)\n",
+    "# semi_clean_crop = semi_clean_crop.drop([\"GPS_ALT\"], axis = 1)"
    ]
   },
   {
@@ -177,17 +188,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "categ_crop_data = pd.DataFrame(semi_clean_crop.select_dtypes(include=['object']))\n",
-    "categ_crop_data = entry_to_lowercase(categ_crop_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "id_data_types(categ_crop_data)"
+    "# categ_crop_data = pd.DataFrame(semi_clean_crop.select_dtypes(include=['object']))\n",
+    "# categ_crop_data = entry_to_lowercase(categ_crop_data)"
    ]
   },
   {
