fixed bigData variable

--- a/more_data_cleaning.ipynb
+++ b/more_data_cleaning.ipynb
@@ -118,27 +118,416 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID_PROJ</th>\n",
+       "      <th>ID_COUNTRY</th>\n",
+       "      <th>YEAR</th>\n",
+       "      <th>ITERATION</th>\n",
+       "      <th>SURVEY_ID</th>\n",
+       "      <th>ID_HH</th>\n",
+       "      <th>GPS_LAT</th>\n",
+       "      <th>GPS_LON</th>\n",
+       "      <th>GPS_ALT</th>\n",
+       "      <th>start_time_user</th>\n",
+       "      <th>...</th>\n",
+       "      <th>value_livestock_prod_consumed_USD_PPP_pHH_Yr</th>\n",
+       "      <th>Market_Orientation</th>\n",
+       "      <th>Livestock_Orientation</th>\n",
+       "      <th>Food_Availability_kCal_MAE_day</th>\n",
+       "      <th>Food_Self_Sufficiency_kCal_MAE_day</th>\n",
+       "      <th>NrofMonthsWildFoodCons</th>\n",
+       "      <th>GHGEmissions</th>\n",
+       "      <th>Gender_MaleControl</th>\n",
+       "      <th>Gender_FemaleControl</th>\n",
+       "      <th>NFertInput</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>CFM</td>\n",
+       "      <td>TZ</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>1</td>\n",
+       "      <td>TZ_CFM_2015</td>\n",
+       "      <td>TZ_2015_CFM_1_1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.049505</td>\n",
+       "      <td>3650.565755</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>CFM</td>\n",
+       "      <td>TZ</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>1</td>\n",
+       "      <td>TZ_CFM_2015</td>\n",
+       "      <td>TZ_2015_CFM_2_1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3632.448997</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>4</td>\n",
+       "      <td>143.934000</td>\n",
+       "      <td>0.499999</td>\n",
+       "      <td>0.500001</td>\n",
+       "      <td>75.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>CFM</td>\n",
+       "      <td>TZ</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>1</td>\n",
+       "      <td>TZ_CFM_2015</td>\n",
+       "      <td>TZ_2015_CFM_3_1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.129870</td>\n",
+       "      <td>5314.779021</td>\n",
+       "      <td>1750.000000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3248.700905</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>20.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>CFM</td>\n",
+       "      <td>TZ</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>1</td>\n",
+       "      <td>TZ_CFM_2015</td>\n",
+       "      <td>TZ_2015_CFM_4_1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>257.234727</td>\n",
+       "      <td>257.234727</td>\n",
+       "      <td>0</td>\n",
+       "      <td>887.156057</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>15.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>CFM</td>\n",
+       "      <td>TZ</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>1</td>\n",
+       "      <td>TZ_CFM_2015</td>\n",
+       "      <td>TZ_2015_CFM_5_1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>23.102694</td>\n",
+       "      <td>0.931377</td>\n",
+       "      <td>0.695041</td>\n",
+       "      <td>925.310354</td>\n",
+       "      <td>22.070240</td>\n",
+       "      <td>0</td>\n",
+       "      <td>14275.030776</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13305</th>\n",
+       "      <td>TA7</td>\n",
+       "      <td>GH</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>1</td>\n",
+       "      <td>GH_TA7_2018</td>\n",
+       "      <td>GH_2018_TA7_387_1</td>\n",
+       "      <td>10.96</td>\n",
+       "      <td>-1.17</td>\n",
+       "      <td>191.0</td>\n",
+       "      <td>1526736900</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.779661</td>\n",
+       "      <td>1615.869392</td>\n",
+       "      <td>339.743848</td>\n",
+       "      <td>7</td>\n",
+       "      <td>81.140386</td>\n",
+       "      <td>0.629176</td>\n",
+       "      <td>0.370824</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13306</th>\n",
+       "      <td>TA7</td>\n",
+       "      <td>GH</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>1</td>\n",
+       "      <td>GH_TA7_2018</td>\n",
+       "      <td>GH_2018_TA7_388_1</td>\n",
+       "      <td>10.97</td>\n",
+       "      <td>-1.16</td>\n",
+       "      <td>210.0</td>\n",
+       "      <td>1526741520</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>355.648536</td>\n",
+       "      <td>355.648536</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2446.112720</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13307</th>\n",
+       "      <td>TA7</td>\n",
+       "      <td>GH</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>1</td>\n",
+       "      <td>GH_TA7_2018</td>\n",
+       "      <td>GH_2018_TA7_389_1</td>\n",
+       "      <td>11.00</td>\n",
+       "      <td>-1.01</td>\n",
+       "      <td>222.0</td>\n",
+       "      <td>1526569680</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.456522</td>\n",
+       "      <td>0.456522</td>\n",
+       "      <td>379.050204</td>\n",
+       "      <td>276.284247</td>\n",
+       "      <td>0</td>\n",
+       "      <td>73.127538</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13308</th>\n",
+       "      <td>TA7</td>\n",
+       "      <td>GH</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>1</td>\n",
+       "      <td>GH_TA7_2018</td>\n",
+       "      <td>GH_2018_TA7_390_1</td>\n",
+       "      <td>11.03</td>\n",
+       "      <td>-1.18</td>\n",
+       "      <td>242.0</td>\n",
+       "      <td>1526826720</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>693.504198</td>\n",
+       "      <td>693.504198</td>\n",
+       "      <td>0</td>\n",
+       "      <td>24273.219029</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>200.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13309</th>\n",
+       "      <td>TA7</td>\n",
+       "      <td>GH</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>1</td>\n",
+       "      <td>GH_TA7_2018</td>\n",
+       "      <td>GH_2018_TA7_391_1</td>\n",
+       "      <td>11.03</td>\n",
+       "      <td>-1.15</td>\n",
+       "      <td>285.0</td>\n",
+       "      <td>1526832720</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>2766.448327</td>\n",
+       "      <td>568.613314</td>\n",
+       "      <td>0</td>\n",
+       "      <td>33228.699913</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>400.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>13310 rows × 811 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      ID_PROJ ID_COUNTRY  YEAR  ITERATION    SURVEY_ID              ID_HH  \\\n",
+       "0         CFM         TZ  2015          1  TZ_CFM_2015    TZ_2015_CFM_1_1   \n",
+       "1         CFM         TZ  2015          1  TZ_CFM_2015    TZ_2015_CFM_2_1   \n",
+       "2         CFM         TZ  2015          1  TZ_CFM_2015    TZ_2015_CFM_3_1   \n",
+       "3         CFM         TZ  2015          1  TZ_CFM_2015    TZ_2015_CFM_4_1   \n",
+       "4         CFM         TZ  2015          1  TZ_CFM_2015    TZ_2015_CFM_5_1   \n",
+       "...       ...        ...   ...        ...          ...                ...   \n",
+       "13305     TA7         GH  2018          1  GH_TA7_2018  GH_2018_TA7_387_1   \n",
+       "13306     TA7         GH  2018          1  GH_TA7_2018  GH_2018_TA7_388_1   \n",
+       "13307     TA7         GH  2018          1  GH_TA7_2018  GH_2018_TA7_389_1   \n",
+       "13308     TA7         GH  2018          1  GH_TA7_2018  GH_2018_TA7_390_1   \n",
+       "13309     TA7         GH  2018          1  GH_TA7_2018  GH_2018_TA7_391_1   \n",
+       "\n",
+       "       GPS_LAT  GPS_LON  GPS_ALT start_time_user  ...  \\\n",
+       "0          NaN      NaN      NaN             NaN  ...   \n",
+       "1          NaN      NaN      NaN             NaN  ...   \n",
+       "2          NaN      NaN      NaN             NaN  ...   \n",
+       "3          NaN      NaN      NaN             NaN  ...   \n",
+       "4          NaN      NaN      NaN             NaN  ...   \n",
+       "...        ...      ...      ...             ...  ...   \n",
+       "13305    10.96    -1.17    191.0      1526736900  ...   \n",
+       "13306    10.97    -1.16    210.0      1526741520  ...   \n",
+       "13307    11.00    -1.01    222.0      1526569680  ...   \n",
+       "13308    11.03    -1.18    242.0      1526826720  ...   \n",
+       "13309    11.03    -1.15    285.0      1526832720  ...   \n",
+       "\n",
+       "      value_livestock_prod_consumed_USD_PPP_pHH_Yr Market_Orientation  \\\n",
+       "0                                         0.000000           1.000000   \n",
+       "1                                         0.000000           1.000000   \n",
+       "2                                         0.000000           1.000000   \n",
+       "3                                         0.000000                NaN   \n",
+       "4                                        23.102694           0.931377   \n",
+       "...                                            ...                ...   \n",
+       "13305                                     0.000000           1.000000   \n",
+       "13306                                     0.000000                NaN   \n",
+       "13307                                     0.000000           0.456522   \n",
+       "13308                                     0.000000                NaN   \n",
+       "13309                                     0.000000           1.000000   \n",
+       "\n",
+       "      Livestock_Orientation Food_Availability_kCal_MAE_day  \\\n",
+       "0                  0.049505                    3650.565755   \n",
+       "1                  0.000000                    3632.448997   \n",
+       "2                  0.129870                    5314.779021   \n",
+       "3                       NaN                     257.234727   \n",
+       "4                  0.695041                     925.310354   \n",
+       "...                     ...                            ...   \n",
+       "13305              0.779661                    1615.869392   \n",
+       "13306                   NaN                     355.648536   \n",
+       "13307              0.456522                     379.050204   \n",
+       "13308                   NaN                     693.504198   \n",
+       "13309              1.000000                    2766.448327   \n",
+       "\n",
+       "      Food_Self_Sufficiency_kCal_MAE_day NrofMonthsWildFoodCons  GHGEmissions  \\\n",
+       "0                               0.000000                      0           NaN   \n",
+       "1                               0.000000                      4    143.934000   \n",
+       "2                            1750.000000                      1   3248.700905   \n",
+       "3                             257.234727                      0    887.156057   \n",
+       "4                              22.070240                      0  14275.030776   \n",
+       "...                                  ...                    ...           ...   \n",
+       "13305                         339.743848                      7     81.140386   \n",
+       "13306                         355.648536                      5   2446.112720   \n",
+       "13307                         276.284247                      0     73.127538   \n",
+       "13308                         693.504198                      0  24273.219029   \n",
+       "13309                         568.613314                      0  33228.699913   \n",
+       "\n",
+       "      Gender_MaleControl Gender_FemaleControl NFertInput  \n",
+       "0               0.000000             1.000000        NaN  \n",
+       "1               0.499999             0.500001       75.0  \n",
+       "2               1.000000             0.000000       20.0  \n",
+       "3                    NaN                  NaN       15.0  \n",
+       "4               1.000000             0.000000       50.0  \n",
+       "...                  ...                  ...        ...  \n",
+       "13305           0.629176             0.370824        3.0  \n",
+       "13306           1.000000             0.000000        3.0  \n",
+       "13307           0.000000             1.000000       50.0  \n",
+       "13308           1.000000             0.000000      200.0  \n",
+       "13309           1.000000             0.000000      400.0  \n",
+       "\n",
+       "[13310 rows x 811 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "bigData  = pd.concat([rhomis_data,rh_indic ],axis = 1)\n",
-    "bigData = bigData.loc[:,~bigData.columns.duplicated()]\n",
+    "bigData\n",
+    "#bigData = bigData.loc[:,~bigData.columns.duplicated()]\n",
     "### replace NaN with na\n",
     "#bigData = bigData.fillna(\"na\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ### remove these columns\n",
-    "# bigData = bigData.drop([\"ITERATION\"], axis = 1) ## survey taken only once for all responders\n",
-    "# bigData =  bigData.drop([\"GPS_LAT\"], axis = 1)\n",
-    "# bigData = bigData.drop([\"GPS_LON\"], axis = 1)\n",
-    "# bigData = bigData.drop([\"GPS_ALT\"], axis = 1)"
    ]
   },
   {
