Store cleaned data
the cleaned dataset is uploaded as its own data file, code included in the cleaning file.

--- a/more_data_cleaning.ipynb
+++ b/more_data_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,29 +12,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "rhomis_data = pd.read_csv(\"/Users/anab/Documents/MS_UCDavis/STA208/project/RHoMIS_Full_Data.csv\", engine = \"python\")\n",
-    "rh_indic = pd.read_csv(\"/Users/anab/Documents/MS_UCDavis/STA208/project/STA_208/data/RHoMIS_Indicators.csv\", engine='python')"
+    "rhomis_data = pd.read_csv(\"data/RHoMIS_Full_Data.csv\", engine = \"python\")\n",
+    "rh_indic = pd.read_csv(\"data/RHoMIS_Indicators.csv\", engine='python')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "## final dataset, keep and drop these columns\n",
     "rhomis_data = rhomis_data[[\"crop_count\", \"crop_name_1\", \"crop_harvest_1\", \"crop_intercrop_1\"]]\n",
     "rh_indic = rh_indic.drop(['ITERATION','GPS_LAT', 'GPS_LON', 'GPS_ALT', 'Altitude','WorstFoodSecMonth',\n",
-    "       'BestFoodSecMonth','FIES_Score',  'currency_conversion_factor', 'GHGEmissions' ],axis = 1)"
+    "       'BestFoodSecMonth','FIES_Score',  'currency_conversion_factor', 'GHGEmissions' ],axis = 1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -180,10 +180,10 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2</td>\n",
-       "      <td>beans</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>na</td>\n",
+       "      <td>groundnut</td>\n",
+       "      <td>na</td>\n",
+       "      <td>na</td>\n",
        "      <td>CFM</td>\n",
        "      <td>TZ</td>\n",
        "      <td>2015</td>\n",
@@ -204,10 +204,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>maize</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>na</td>\n",
+       "      <td>millet</td>\n",
+       "      <td>na</td>\n",
+       "      <td>na</td>\n",
        "      <td>CFM</td>\n",
        "      <td>TZ</td>\n",
        "      <td>2015</td>\n",
@@ -228,10 +228,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>4</td>\n",
-       "      <td>beans</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>na</td>\n",
+       "      <td>groundnut</td>\n",
+       "      <td>na</td>\n",
+       "      <td>na</td>\n",
        "      <td>CFM</td>\n",
        "      <td>TZ</td>\n",
        "      <td>2015</td>\n",
@@ -252,10 +252,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2</td>\n",
-       "      <td>beans</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>na</td>\n",
+       "      <td>cowpea</td>\n",
+       "      <td>na</td>\n",
+       "      <td>na</td>\n",
        "      <td>CFM</td>\n",
        "      <td>TZ</td>\n",
        "      <td>2015</td>\n",
@@ -276,10 +276,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>banana</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>na</td>\n",
+       "      <td>sesame</td>\n",
+       "      <td>na</td>\n",
+       "      <td>na</td>\n",
        "      <td>CFM</td>\n",
        "      <td>TZ</td>\n",
        "      <td>2015</td>\n",
@@ -324,7 +324,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13305</th>\n",
-       "      <td>2</td>\n",
+       "      <td>3</td>\n",
        "      <td>maize</td>\n",
        "      <td>good_harvest</td>\n",
        "      <td>monoculture</td>\n",
@@ -348,9 +348,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13306</th>\n",
-       "      <td>2</td>\n",
+       "      <td>5</td>\n",
        "      <td>maize</td>\n",
-       "      <td>normal_harvest</td>\n",
+       "      <td>good_harvest</td>\n",
        "      <td>monoculture</td>\n",
        "      <td>TA7</td>\n",
        "      <td>GH</td>\n",
@@ -372,10 +372,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13307</th>\n",
-       "      <td>3</td>\n",
+       "      <td>2</td>\n",
        "      <td>maize</td>\n",
        "      <td>bad_harvest</td>\n",
-       "      <td>monoculture</td>\n",
+       "      <td>intercrop</td>\n",
        "      <td>TA7</td>\n",
        "      <td>GH</td>\n",
        "      <td>2018</td>\n",
@@ -397,7 +397,7 @@
        "    <tr>\n",
        "      <th>13308</th>\n",
        "      <td>2</td>\n",
-       "      <td>millet</td>\n",
+       "      <td>maize</td>\n",
        "      <td>bad_harvest</td>\n",
        "      <td>intercrop</td>\n",
        "      <td>TA7</td>\n",
@@ -422,7 +422,7 @@
        "      <th>13309</th>\n",
        "      <td>2</td>\n",
        "      <td>maize</td>\n",
-       "      <td>normal_harvest</td>\n",
+       "      <td>bad_harvest</td>\n",
        "      <td>monoculture</td>\n",
        "      <td>TA7</td>\n",
        "      <td>GH</td>\n",
@@ -448,18 +448,18 @@
        "</div>"
       ],
       "text/plain": [
-       "      crop_count crop_name_1  crop_harvest_1 crop_intercrop_1 ID_PROJ  \\\n",
-       "0              2       beans             NaN              NaN     CFM   \n",
-       "1              2       maize             NaN              NaN     CFM   \n",
-       "2              4       beans             NaN              NaN     CFM   \n",
-       "3              2       beans             NaN              NaN     CFM   \n",
-       "4              5      banana             NaN              NaN     CFM   \n",
-       "...          ...         ...             ...              ...     ...   \n",
-       "13305          2       maize    good_harvest      monoculture     TA7   \n",
-       "13306          2       maize  normal_harvest      monoculture     TA7   \n",
-       "13307          3       maize     bad_harvest      monoculture     TA7   \n",
-       "13308          2      millet     bad_harvest        intercrop     TA7   \n",
-       "13309          2       maize  normal_harvest      monoculture     TA7   \n",
+       "      crop_count crop_name_1 crop_harvest_1 crop_intercrop_1 ID_PROJ  \\\n",
+       "0             na   groundnut             na               na     CFM   \n",
+       "1             na      millet             na               na     CFM   \n",
+       "2             na   groundnut             na               na     CFM   \n",
+       "3             na      cowpea             na               na     CFM   \n",
+       "4             na      sesame             na               na     CFM   \n",
+       "...          ...         ...            ...              ...     ...   \n",
+       "13305          3       maize   good_harvest      monoculture     TA7   \n",
+       "13306          5       maize   good_harvest      monoculture     TA7   \n",
+       "13307          2       maize    bad_harvest        intercrop     TA7   \n",
+       "13308          2       maize    bad_harvest        intercrop     TA7   \n",
+       "13309          2       maize    bad_harvest      monoculture     TA7   \n",
        "\n",
        "      ID_COUNTRY  YEAR    SURVEY_ID              ID_HH   Country  ...  \\\n",
        "0             TZ  2015  TZ_CFM_2015    TZ_2015_CFM_1_1  Tanzania  ...   \n",
@@ -542,7 +542,7 @@
        "[13310 rows x 47 columns]"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -613,7 +613,7 @@
        "15   LandOwned  31.547708"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -674,10 +674,10 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2</td>\n",
-       "      <td>beans</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>na</td>\n",
+       "      <td>groundnut</td>\n",
+       "      <td>na</td>\n",
+       "      <td>na</td>\n",
        "      <td>CFM</td>\n",
        "      <td>TZ</td>\n",
        "      <td>2015</td>\n",
@@ -698,10 +698,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>maize</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>na</td>\n",
+       "      <td>millet</td>\n",
+       "      <td>na</td>\n",
+       "      <td>na</td>\n",
        "      <td>CFM</td>\n",
        "      <td>TZ</td>\n",
        "      <td>2015</td>\n",
@@ -722,10 +722,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>4</td>\n",
-       "      <td>beans</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>na</td>\n",
+       "      <td>groundnut</td>\n",
+       "      <td>na</td>\n",
+       "      <td>na</td>\n",
        "      <td>CFM</td>\n",
        "      <td>TZ</td>\n",
        "      <td>2015</td>\n",
@@ -751,9 +751,9 @@
       ],
       "text/plain": [
        "  crop_count crop_name_1 crop_harvest_1 crop_intercrop_1 ID_PROJ ID_COUNTRY  \\\n",
-       "0          2       beans            NaN              NaN     CFM         TZ   \n",
-       "1          2       maize            NaN              NaN     CFM         TZ   \n",
-       "2          4       beans            NaN              NaN     CFM         TZ   \n",
+       "0         na   groundnut             na               na     CFM         TZ   \n",
+       "1         na      millet             na               na     CFM         TZ   \n",
+       "2         na   groundnut             na               na     CFM         TZ   \n",
        "\n",
        "   YEAR    SURVEY_ID            ID_HH   Country  ...  \\\n",
        "0  2015  TZ_CFM_2015  TZ_2015_CFM_1_1  Tanzania  ...   \n",
@@ -793,7 +793,7 @@
        "[3 rows x 45 columns]"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -805,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -859,7 +859,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -871,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -907,21 +907,21 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>crop_count</td>\n",
-       "      <td>[2, 4, 5, 3, 1, nan, 10, 6, 7, 8, 0]</td>\n",
+       "      <td>[nan, 1, 2, 3, 5, 4, 6, 7, 8, 0, 10]</td>\n",
        "      <td>11.0</td>\n",
        "      <td>object</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>crop_name_1</td>\n",
-       "      <td>[beans, maize, banana, cabbage, nan, tomato, f...</td>\n",
+       "      <td>[groundnut, millet, cowpea, sesame, other vege...</td>\n",
        "      <td>76.0</td>\n",
        "      <td>object</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>crop_harvest_1</td>\n",
-       "      <td>[nan, bad_harvest, good_harvest, normal_harvest]</td>\n",
+       "      <td>[nan, bad_harvest, normal_harvest, good_harvest]</td>\n",
        "      <td>4.0</td>\n",
        "      <td>object</td>\n",
        "    </tr>\n",
@@ -994,9 +994,9 @@
       ],
       "text/plain": [
        "               variable                                           category  \\\n",
-       "0            crop_count               [2, 4, 5, 3, 1, nan, 10, 6, 7, 8, 0]   \n",
-       "1           crop_name_1  [beans, maize, banana, cabbage, nan, tomato, f...   \n",
-       "2        crop_harvest_1   [nan, bad_harvest, good_harvest, normal_harvest]   \n",
+       "0            crop_count               [nan, 1, 2, 3, 5, 4, 6, 7, 8, 0, 10]   \n",
+       "1           crop_name_1  [groundnut, millet, cowpea, sesame, other vege...   \n",
+       "2        crop_harvest_1   [nan, bad_harvest, normal_harvest, good_harvest]   \n",
        "3      crop_intercrop_1                      [nan, intercrop, monoculture]   \n",
        "4               ID_PROJ  [CFM, S4N, CW1, CW2, CFG, CM1, CM2, SIL, CM3, ...   \n",
        "5            ID_COUNTRY  [TZ, GT, SV, HN, ML, BF, MW, KE, IN, KH, VN, L...   \n",
@@ -1022,7 +1022,7 @@
        "11        4.0    object  "
       ]
      },
-     "execution_count": 113,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1034,7 +1034,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write to CSV: only needs to be run once.\n",
+    "bigData.to_csv(\"data/clean.csv\", encoding='utf-8', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1087,7 +1097,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
