added underscore and space cleaning function to cleaning functions class

--- a/finalized_code/functions_class.ipynb
+++ b/finalized_code/functions_class.ipynb
@@ -292,7 +292,15 @@
     "    def replace_na_with_NaN(self, df):\n",
     "        for i in df.columns:\n",
     "            df[i] = df[i].replace('na', np.NaN)\n",
-    "        return df"
+    "        return df\n",
+    "    \n",
+    "    # removes underscores and spaces from instances, examples: 'No_School-> NoSchool, no school -> noschool'\n",
+    "    def remove_underscores_spaces(df):\n",
+    "         for i in df.columns:\n",
+    "            if (df[i].dtype == \"O\"):\n",
+    "            df[i] = df[i].str.replace('_', \"\")\n",
+    "            df[i] = df[i].str.replace(' ', \"\")\n",
+    "        return df\n"
    ]
   },
   {
@@ -859,7 +867,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
