--- a/more_data_cleaning.ipynb
+++ b/more_data_cleaning.ipynb
@@ -1083,7 +1083,7 @@
     "bigData.continent[bigData.Country == \"Cambodia\"] = \"asia\"\n",
     "bigData.continent[bigData.Country == \"Vietnam\"] = \"asia\"\n",
     "bigData.continent[bigData.Country == \"LaoPDR\"] = \"asia\"\n",
-    "bigData.continent[bigData.Country == \"Ethiopia”] = \"africa\"\n",
+    "bigData.continent[bigData.Country == \"Ethiopia\"] = \"africa\"\n",
     "bigData.continent[bigData.Country == \"DRC\"] = \"africa\"\n",
     "bigData.continent[bigData.Country == \"Zambia\"] = \"africa\"\n",
     "bigData.continent[bigData.Country == \"Ghana\"] = \"africa\"\n",
@@ -1152,7 +1152,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
